# nasa-exoplanet-detection-platform

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  DOCKER_MIGRATION.md  LICENSE  README.md  README_DEPLOYMENT.md  REPOSITORY_STATUS.md  docker-compose.yml  nasa.conf  nasa.conf.example  opencode_global_config.json  render.yaml  setup-github.sh  setup-nginx.sh  test_feature_importance.py  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: backend-ci.yml  ci.yml  deploy-frontend.yml
ML/Data Pipeline/: make_koi_timeseries_subset.py
ML/Data Pipeline/artifacts/: baseline_report.txt  feature_importances.csv  kepler_sample_eval.txt  kepler_sample_predictions.csv
ML/Data Pipeline/data/processed/: koi_timeseries_subset.csv
ML/training/: predict_one.py  test_on_kepler_samples.py  train_baseline.py
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  start_server.sh
backend/.github/workflows/: ci.yml
backend/scripts/: make_openapi.py
backend/src/app/: main.py
backend/src/app/routers/: chat.py  lightcurve.py  tabular.py
frontend/: .eslintignore  README.md  generate-favicon.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/public/: CNAME  sample_lightcurve.csv  sample_tabular.csv  sample_tess_data.csv
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/forms/: FileUpload.tsx  (+2 more)
frontend/src/utils/: exoplanetData.ts
(+17 files in other folders)
