[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "armana-backend"
version = "0.1.0"
description = "Exoplanet detection backend (tabular and light-curve)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Armana Team" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
lightcurve = [
  "astropy>=6.0",
  "lightkurve>=2.4",
  "wotan>=1.10; python_version<'3.12'",
  "transitleastsquares>=1.0",
  "batman-package>=2.4.9",
  "scipy>=1.11",
]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=7.4",
  "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"


